docs: fix docs for userid params, also add a new server instance
